--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- start of meta-tags -->
     <!-- Specify the character encoding for the HTML document -->
@@ -10,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- End of meta tags -->
     <!-- start of style sheets -->
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
+    <link rel="stylesheet" href="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
@@ -19,13 +18,12 @@
     <!-- End of style sheets -->
     <title>Restaurant Reviews</title>
 </head>
-
 <body>
     <!-- Beginning header -->
     <header class="header" role="banner">
         <!-- Beginning nav -->
         <nav class="nav" role="navigation">
-            <h1><a href="/" aria-label="Reload web page">Restaurant Reviews </a></h1>
+            <h1><a href="/" aria-label="Page Header">Restaurant Reviews </a></h1>
         </nav>
         <!-- End nav -->
     </header>
@@ -40,7 +38,7 @@
             <div id="map" aria-label="Restaurant Location" role="application"></div>
         </section>
         <!-- End map-container -->
-        <section>
+        <section class="restaurant-container">
             <!-- Beginning filter-options-->
             <div class="filter-options">
                 <h2 id="filter-header" tabindex="-1">Filter Results</h2>
@@ -76,16 +74,17 @@
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
             integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
             crossorigin=""></script>
+    <!-- Database helpers -->
     <script src="js/dbhelper.js"></script>
+    <!-- Main javascript file -->
     <script src="js/main.js"></script>
-    <script src ="js/swRegister.js"></script>
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
+    <!-- service worker javascript register file -->
+    <script src="js/swRegister.js"></script>
     <!-- End of scripts -->
     <!-- start footer -->
     <footer id="footer" role="contentinfo">
-        Copyright (c) 2019 <a href="/" aria-label="Footer Reload page"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+        Copyright (c) 2019 <a href="/" aria-label="Footer of page"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
     </footer>
     <!-- End footer -->
 </body>
-
 </html>
