--- a/restaurant.html
+++ b/restaurant.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- End of meta tags -->
     <!-- Normalize.css for better cross-browser consistency -->
-    <link rel="stylesheet" href="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <!-- Main CSS file -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css"/>
